# hri-safe-remote-control-system

./: CMakeLists.txt  package.xml
debian/: changelog  control  rules
hri_safety_sense/: CMakeLists.txt
hri_safety_sense/include/: VehicleMessages.h  VscProcess.h
hri_safety_sense/launch/: vsc_interface.launch
hri_safety_sense/src/: VscProcess.cpp
include/: JoystickHandler.h  MsgHandler.h  VehicleInterface.h  VscProcess.h
include/hri_safe_remote_control_system/: SerialInterface.h  VehicleInterface.h  VehicleMessages.h  VscProcess.h
launch/: vsc_interface.launch
msg/: FortHealth.msg  SrcDisplay.msg  SrcHealth.msg
src/: JoystickHandler.cpp  SerialInterface.c  VehicleInterface.c  VscProcess.cpp  main.cpp
srv/: GetVscSettings.srv
