<?xml version="1.0"?>
<package format="2">
  <name>hri_safe_remote_control_system</name>
  <version>0.2.0</version>
  <description>HRI Library for Serial Communication in ROS</description>

  <author>hri</author>
  <maintainer email="developers@greenzie.com">Greenzie Developers</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <depend>genmsg</depend>
  <depend>message_runtime</depend>
</package>

